# ihelper-tech

./: .gitignore  CRITICAL_PATH.md  NEXT_STEPS_SOP.md  PROJECT_TRUTH.md  README.md  SAVE_STATE_20241222.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml
docs/analysis/: BACKUP_ANALYSIS.md
docs/demonstrations/: client_demo.md
docs/deployment/: PRODUCTION_DEPLOYMENT.md  SECURITY_CONFIG.md
docs/development/: ai_prompts.md  roadmap.md  system_architecture.md
docs/emergency_offer/: complete_offer.md
docs/integration/: system_integration.md
docs/onboarding/: ONBOARDING_SOP.md
docs/resources/: R2_MONITORING.md  RESOURCE_LIBRARY.md  STRUCTURE.md  library_structure.md
docs/setup/: CLOUDFLARE_SETUP.md  TECHNICAL_SETUP.md  WORKFLOW_STATUS.md
resources/01_Business_Protection/: README.md
resources/01_Business_Protection/Data_Backup/: README.md
resources/02_Documentation/: README.md
resources/03_Templates/: README.md
resources/04_Guides/: README.md
resources/05_Tools/: README.md
resources/06_Policies/: README.md
resources/07_Training/: README.md
resources/08_Support/: README.md
src/easy_secure/: backup_config.py  backup_manager.py  requirements.txt
src/integration/: requirements.txt  system_integrator.py
src/onboarding/: client_onboarding.py
src/precisionwatch/: monitor_config.py  monitor_manager.py  requirements.txt
src/resources/: r2_manager.py  resource_manager.py  resource_structure.py
src/tests/: test_r2_connection.py
website/public/: index.html
(+32 files in other folders)
