[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.pylint]
max-line-length = 88
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "C0103",  # invalid-name
]
ignore = ["CVS"]
ignore-patterns = ["test_.*?py"]
max-complexity = 10

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert statements
targets = ["src"]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
